Afegida teoria a anàlisi complexa fins a les equacions de Cauchy-Riemann

--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -1403,7 +1403,7 @@
 		\begin{enumerate}
 			\item la sèrie \(\sum_{n=0}^{\infty}a_{n}(x-x_{0})^{n}\) és absolutament convergent per a tot \(x\) satisfent \(\abs{x-x_{0}}<R\).
 			\item per a tot real \(r<R\) la sèrie de funcions \(\sum_{n=0}^{\infty}a_{n}(x-x_{0})^{n}\) convergeix uniformement per a tot \(x\) satisfent \(\abs{x-x_{0}}\leq r\).
-			\item La sèrie \(\sum_{n=0}^{\infty}a_{n}(x-x_{0})^{n}\) és divergent per a tot \(x\) satisfent \(\abs{x-x_{0}}>R\).
+			\item la sèrie \(\sum_{n=0}^{\infty}a_{n}(x-x_{0})^{n}\) és divergent per a tot \(x\) satisfent \(\abs{x-x_{0}}>R\).
 		\end{enumerate}
 		Aleshores direm que \(R\) és el radi de convergència de la sèrie de potències.
 		
