--- a/parts/Complexa.tex
+++ b/parts/Complexa.tex
@@ -13,18 +13,18 @@
 	\end{notation}
 	\begin{definition}[Suma de nombres complexos]
 		\labelname{suma de nombres complexos}\label{def:suma de nombres complexos}
-		Siguin \(a+\iu b\) i \(c+\iu d\) dos nombres complexos. Aleshores definim la seva suma com
+		Siguin~\(a+\iu b\) i~\(c+\iu d\) dos nombres complexos. Aleshores definim la seva suma com
 		\[(a+\iu b)+(c+\iu d)=(a+c)+\iu(b+d).\]
 	\end{definition}
 	\begin{observation}
 		\label{obs:els nombres complexos estan tancats per la suma}
-		Siguin \(a+\iu b\) i \(c+\iu d\) dos nombres complexos. Aleshores
+		Siguin~\(a+\iu b\) i~\(c+\iu d\) dos nombres complexos. Aleshores
 		\[(a+\iu b+c+\iu d)\in\field{C}\]
 	\end{observation}
 	\begin{proposition}
 		\label{prop:els nombres complexos commuten per la suma}
 		\label{prop:el producte de nombres complexos és commutatiu}
-		Siguin \(a+\iu b\) i \(c+\iu d\) dos nombres complexos. Aleshores
+		Siguin~\(a+\iu b\) i~\(c+\iu d\) dos nombres complexos. Aleshores
 		\[(a+\iu b)+(c+\iu d)=(c+\iu d)+(a+\iu b).\]
 	\end{proposition}
 	\begin{proof}
@@ -36,7 +36,7 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:els nombres complexos són associatius per la suma}
-		Siguin \(a+\iu b\), \(c+\iu d\) i \(u+\iu v\) tres nombres complexos. Aleshores
+		Siguin~\(a+\iu b\),~\(c+\iu d\) i~\(u+\iu v\) tres nombres complexos. Aleshores
 		\[(a+\iu b)+\big((c+\iu d)+(u+\iu v)\big)=\big((a+\iu b)+(c+\iu d)\big)+(u+\iu v).\]
 	\end{proposition}
 	\begin{proof}
@@ -51,7 +51,7 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:element neutre per la suma dels complexos}
-		Sigui \(a+\iu b\) un nombre complex. Aleshores
+		Sigui~\(a+\iu b\) un nombre complex. Aleshores
 		\[(a+\iu b)+0=a+\iu b.\]
 	\end{proposition}
 	\begin{proof}
@@ -60,7 +60,7 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:element invers per la suma dels complexos}
-		Sigui \(a+\iu b\) un nombre complex. Aleshores
+		Sigui~\(a+\iu b\) un nombre complex. Aleshores
 		\[(a+\iu b)+(-a-\iu b)=0.\]
 	\end{proposition}
 	\begin{proof}
@@ -69,17 +69,17 @@
 	\end{proof}
 	\begin{definition}[Producte de nombres complexos]
 		\labelname{producte de nombres complexos}\label{def:producte de nombres complexos}
-		Siguin \(a+\iu b\) i \(c+\iu d\) dos nombres complexos. Aleshores definim el seu producte com
+		Siguin~\(a+\iu b\) i~\(c+\iu d\) dos nombres complexos. Aleshores definim el seu producte com
 		\[(a+\iu b)\cdot(c+\iu d)=(ac-bd)+\iu(ad+bc).\]
 	\end{definition}
 	\begin{observation}
 		\label{obs:els nombres complexos estan tancats pel producte}
-		Siguin \(a+\iu b\) i \(c+\iu d\) dos nombres complexos. Aleshores
+		Siguin~\(a+\iu b\) i~\(c+\iu d\) dos nombres complexos. Aleshores
 		\[(a+\iu b)(c+\iu d)\in\field{C}.\]
 	\end{observation}
 	\begin{proposition}
 		\label{prop:els nombres complexos commuten pel producte}
-		Siguin \(a+\iu b\) i \(c+\iu d\) dos nombres complexos. Aleshores
+		Siguin~\(a+\iu b\) i~\(c+\iu d\) dos nombres complexos. Aleshores
 		\[(a+\iu b)(c+\iu d)=(c+\iu d)(a+\iu b).\]
 	\end{proposition}
 	\begin{proof}
@@ -91,11 +91,11 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:els nombres complexos són associatius pel producte}
-		Siguin \(a+\iu b\), \(c+\iu d\) i \(u+\iu v\) tres nombres complexos. Aleshores
+		Siguin~\(a+\iu b\),~\(c+\iu d\) i~\(u+\iu v\) tres nombres complexos. Aleshores
 		\[(a+\iu b)\big((c+\iu d)(u+\iu v))\big)=\big((a+\iu b)(c+\iu d)\big)(u+\iu v).\]
 	\end{proposition}
 	\begin{proof}
-		Prenem \(\alpha=a+\iu b\), \(\beta=c+\iu d\) i \(\gamma=u+\iu v\). Per la definició de~\myref{def:producte de nombres complexos} tenim
+		Prenem~\(\alpha=a+\iu b\),~\(\beta=c+\iu d\) i~\(\gamma=u+\iu v\). Per la definició de~\myref{def:producte de nombres complexos} tenim
 		\begin{align*}
 			\alpha\big(\beta\gamma\big)&=(a+\iu b)\big((c+\iu d)(u+\iu v)\big) \\
 			&=(a+\iu b)\big((cu-dv)+\iu(cv+du)\big) \\
@@ -109,7 +109,7 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:element neutre pel producte dels complexos}
-		Sigui \(a+\iu b\) un nombre complex. Aleshores
+		Sigui~\(a+\iu b\) un nombre complex. Aleshores
 		\[(a+\iu b)\cdot1=a+\iu b.\]
 	\end{proposition}
 	\begin{proof}
@@ -118,7 +118,7 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:element invers pel producte de nombres complexos}
-		Sigui \(a+\iu b\) un nombre complex. Aleshores
+		Sigui~\(a+\iu b\) un nombre complex. Aleshores
 		\[(a+\iu b)\Big(\frac{a}{a^{2}+b^{2}}+\iu\frac{-b}{a^{2}+b^{2}}\Big)=1.\]
 	\end{proposition}
 	\begin{proof}
@@ -130,7 +130,7 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:distribuitva del producte respecte la suma de nombres complexos}
-		Siguin \(a+\iu b\), \(c+\iu d\) i \(u+\iu v\) tres nombres complexos. Aleshores
+		Siguin~\(a+\iu b\),~\(c+\iu d\) i~\(u+\iu v\) tres nombres complexos. Aleshores
 		\[(a+\iu b)\big((c+\iu d)+(u+\iu v)\big)=(a+\iu b)(c+\iu d)+(a+\iu b)(u+\iu v).\]
 	\end{proposition}
 	\begin{proof}
@@ -146,22 +146,22 @@
 	\end{proof}
 	\begin{corollary}
 		\label{cor:els complexos formen un cos}
-		El conjunt \(\field{C}\) amb la suma \(+\) i el producte \(\cdot\) és un cos.
+		El conjunt~\(\field{C}\) amb la suma~\(+\) i el producte~\(\cdot\) és un cos.
 	\end{corollary}
 	\subsection{Propietats de nombres complexos}
 	\begin{definition}[Conjugat d'un nombre complex]
 		\labelname{conjugat d'un nombre complex}\label{def:conjugat d'un nombre complex}
-		Sigui \(z=a+\iu b\) un nombre complex. Aleshores definim
+		Sigui~\(z=a+\iu b\) un nombre complex. Aleshores definim
 		\[\conjugat{z}=a-\iu b\]
-		com el conjugat de \(z\).
+		com el conjugat de~\(z\).
 	\end{definition}
 	\begin{proposition}
 		\label{prop:el conjugat del conjugat d'un nombre complex és ell mateix}
-		Sigui \(z\) un nombre complex. Aleshores
+		Sigui~\(z\) un nombre complex. Aleshores
 		\[\conjugat{\conjugat{z}}=z.\]
 	\end{proposition}
 	\begin{proof}
-		Per la definició de~\myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+\iu b\). Aleshores per la definició de~\myref{def:conjugat d'un nombre complex} tenim que
+		Per la definició de~\myref{def:nombre complex} tenim que existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z=a+\iu b\). Aleshores per la definició de~\myref{def:conjugat d'un nombre complex} tenim que
 		\begin{align*}
 			\conjugat{\conjugat{z}}&=\conjugat{\conjugat{a+\iu b}} \\
 			&=\conjugat{a-\iu b} \\
@@ -170,11 +170,11 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:el conjugat de la suma és la suma de conjugats}
-		Siguin \(z\) i \(w\) dos nombres complexos. Aleshores
+		Siguin~\(z\) i~\(w\) dos nombres complexos. Aleshores
 		\[\conjugat{z+w}=\conjugat{z}+\conjugat{w}.\]
 	\end{proposition}
 	\begin{proof}
-		Per la definició de~\myref{def:nombre complex} tenim que existeixen \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
+		Per la definició de~\myref{def:nombre complex} tenim que existeixen~\(a\),~\(b\),~\(c\),~\(d\in\field{R}\) tals que
 		\[z=a+\iu b\qquad\text{i}\qquad w=c+\iu d.\]
 		Aleshores per la definició de~\myref{def:suma de nombres complexos} i la definició de~\myref{def:conjugat d'un nombre complex} trobem que
 		\begin{align*}
@@ -187,11 +187,11 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:el conjugat del producte és el producte de conjugats}
-		Siguin \(z\) i \(w\) dos nombres complexos. Aleshores
+		Siguin~\(z\) i~\(w\) dos nombres complexos. Aleshores
 		\[\conjugat{zw}=\conjugat{z}\,\conjugat{w}.\]
 	\end{proposition}
 	\begin{proof}
-		Per la definició de~\myref{def:nombre complex} tenim que existeixen \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
+		Per la definició de~\myref{def:nombre complex} tenim que existeixen~\(a\),~\(b\),~\(c\),~\(d\in\field{R}\) tals que
 		\[z=a+\iu b\qquad\text{i}\qquad w=c+\iu d.\]
 		Aleshores per la definició de~\myref{def:producte de nombres complexos} i la definició de~\myref{def:conjugat d'un nombre complex} trobem que
 		\begin{align*}
@@ -205,7 +205,7 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}
-		Sigui \(z=a+\iu b\) un nombre complex. Aleshores
+		Sigui~\(z=a+\iu b\) un nombre complex. Aleshores
 		\[z\conjugat{z}=a^{2}+b^{2}.\]
 	\end{proposition}
 	\begin{proof}
@@ -217,20 +217,20 @@
 	\end{proof}
 	\begin{proposition}
 		\label{prop:un nombre complex és igual al seu conjugat si i només si és un real}
-		Sigui \(z\) un nombre complex. Aleshores \(z=\conjugat{z}\) si i només si \(z\in\field{R}\).
+		Sigui~\(z\) un nombre complex. Aleshores~\(z=\conjugat{z}\) si i només si~\(z\in\field{R}\).
 	\end{proposition}
 	\begin{proof}
-		Per la definició de~\myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+\iu b\). Aleshores si tenim \(z=\conjugat{z}\), per la definició de~\myref{def:conjugat d'un nombre complex} trobem que
+		Per la definició de~\myref{def:nombre complex} tenim que existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z=a+\iu b\). Aleshores si tenim~\(z=\conjugat{z}\), per la definició de~\myref{def:conjugat d'un nombre complex} trobem que
 		\[a+\iu b=a-\iu b,\]
-		que és equivalent a \(b=-b\), i per tant ha de ser \(b=0\) i trobem que \(z=a\in\field{R}\).
+		que és equivalent a~\(b=-b\), i per tant ha de ser~\(b=0\) i trobem que~\(z=a\in\field{R}\).
 	\end{proof}
 	\begin{proposition}
 		\label{prop:inversa d'un nombre complex en funció del seu conjugat}
-		Sigui \(z\neq0\) un nombre complex. Aleshores
+		Sigui~\(z\neq0\) un nombre complex. Aleshores
 		\[z^{-1}=\frac{\conjugat{z}}{z\conjugat{z}}.\]
 	\end{proposition}
 	\begin{proof}
-		Per la definició de~\myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+\iu b\). Aleshores tenim que
+		Per la definició de~\myref{def:nombre complex} tenim que existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z=a+\iu b\). Aleshores tenim que
 		\begin{align*}
 			z\frac{\conjugat{z}}{z\conjugat{z}}&=\frac{z\conjugat{z}}{z\conjugat{z}} \\
 			&=\frac{a^{2}+b^{2}}{a^{2}+b^{2}}=1 \tag{\ref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}}
@@ -241,21 +241,21 @@
 		\labelname{part real i part imaginària d'un nombre complex}\label{def:part real i part imaginària d'un nombre complex}
 		\labelname{part real d'un nombre complex}\label{def:part real d'un nombre complex}
 		\labelname{part imaginària d'un nombre complex}\label{def:part imaginària d'un nombre complex}
-		Sigui \(z=a+\iu b\) un nombre complex. Aleshores definim
+		Sigui~\(z=a+\iu b\) un nombre complex. Aleshores definim
 		\[\Re(z)=a\]
-		com la part real de \(z\) i
+		com la part real de~\(z\) i
 		\[\Im(z)=b\]
-		com la part imaginària de \(z\).
+		com la part imaginària de~\(z\).
 	\end{definition}
 	\begin{proposition}
 		\label{prop:fórmules per la part real i part imaginària d'un nombre complex}
 		\label{prop:fórmula per la part real d'un nombre complex}
 		\label{prop:fórmula per la part imaginària d'un nombre complex}
-		Sigui \(z\) un nombre complex. Aleshores
+		Sigui~\(z\) un nombre complex. Aleshores
 		\[\Re(z)=\frac{z+\conjugat{z}}{2}\qquad\text{i}\qquad\Im(z)=\frac{z-\conjugat{z}}{2\iu}.\]
 	\end{proposition}
 	\begin{proof}
-		Per la definició de~\myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+\iu b\). Aleshores tenim que
+		Per la definició de~\myref{def:nombre complex} tenim que existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z=a+\iu b\). Aleshores tenim que
 		\[\frac{z+\conjugat{z}}{2}=\frac{a+\iu b+a-\iu b}{2}=\frac{2a}{2}=a=\Re(z),\]
 		i
 		\[\frac{z-\conjugat{z}}{2\iu}=\frac{a+\iu b-a+\iu b}{2\iu}=\frac{2\iu b}{2\iu}=b=\Im(z),\]
@@ -264,14 +264,14 @@
 	\subsection{Topologia de nombres complexos}
 	\begin{definition}[Mòdul d'un nombre complex]
 		\labelname{mòdul d'un nombre complex}\label{def:mòdul d'un nombre complex}
-		Sigui \(z=a+\iu b\) un nombre complex. Aleshores definim el seu mòdul com
+		Sigui~\(z=a+\iu b\) un nombre complex. Aleshores definim el seu mòdul com
 		\[\modul{z}=\sqrt{a^{2}+b^{2}}.\]
 	\end{definition}
 	\begin{observation}
 		\label{obs:les parts real i imaginàries d'un complex són menors que el seu mòdul}
 		\label{obs:la part real d'un complex és menor que el seu mòdul}
 		\label{obs:la part imaginària d'un complex és menor que el seu mòdul}
-		\(\Re(z)\leq\modul{z}\), \(\Im(z)\leq\modul{z}\).
+		\(\Re(z)\leq\modul{z}\),~\(\Im(z)\leq\modul{z}\).
 	\end{observation}
 	\begin{observation}
 		\label{prop:el mòdul d'un nombre complex és no negatiu}
@@ -283,15 +283,15 @@
 		\[\modul{z}=0\sii z=0.\]
 	\end{proposition}
 	\begin{proof}
-		Per la definició de~\myref{def:nombre complex} tenim que \(z=a+\iu b\). Suposem que~\(\modul{z}=0\). Per la definició de~\myref{def:mòdul d'un nombre complex} tenim que~\(\sqrt{a^{2}+b^{2}}=0\), i per tant ha de ser~\(a^{2}+b^{2}=0\), d'on trobem que~\(a=b=0\) i per tant~\(z=0\).
+		Per la definició de~\myref{def:nombre complex} tenim que~\(z=a+\iu b\). Suposem que~\(\modul{z}=0\). Per la definició de~\myref{def:mòdul d'un nombre complex} tenim que~\(\sqrt{a^{2}+b^{2}}=0\), i per tant ha de ser~\(a^{2}+b^{2}=0\), d'on trobem que~\(a=b=0\) i per tant~\(z=0\).
 	\end{proof}
 	\begin{proposition}
 		\label{prop:el mòdul d'un nombre complex és l'arrel del nombre pel seu conjugat}
-		Sigui \(z\) un nombre complex. Aleshores es satisfà
+		Sigui~\(z\) un nombre complex. Aleshores es satisfà
 		\[\modul{z}=\sqrt{z\conjugat{z}}.\]
 	\end{proposition}
 	\begin{proof}
-		Per la definició de~\myref{def:nombre complex} tenim que \(z=a+\iu b\), i per la proposició~\myref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria} trobem que
+		Per la definició de~\myref{def:nombre complex} tenim que~\(z=a+\iu b\), i per la proposició~\myref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria} trobem que
 		\begin{align*}
 			z\conjugat{z}&=a^{2}+b^{2} \\
 			&=\big(\sqrt{a^{2}+b^{2}}\big)^{2}=\modul{z}^{2}, \tag{\ref{def:mòdul d'un nombre complex}}
@@ -301,7 +301,7 @@
 	\end{proof}
 	\begin{proposition}[Desigualtat triangular]
 		\labelname{desigualtat triangular}\label{prop:desigualta triangular nombres complexos}
-		Siguin \(z\) i \(w\) dos nombres complexos. Aleshores
+		Siguin~\(z\) i~\(w\) dos nombres complexos. Aleshores
 		\[\modul{z+w}\leq\modul{z}+\modul{w}.\]
 	\end{proposition}
 	\begin{proof}
@@ -456,7 +456,8 @@
 		Sigui~\(f\) una funció~\(\CC\)-derivable en un punt~\(z_{0}\). Aleshores~\(f\) és contínua en~\(z_{0}\).
 	\end{observation}
 	\begin{example}
-	Volem veure que la funció~\(f(z)=z\) és contínua i~\(\CC\)-derivable, i calcular~\(f'\).
+		\label{ex:la funció identitat és entera}
+		Volem veure que la funció~\(f(z)=z\) és contínua i~\(\CC\)-derivable, i calcular~\(f'\).
 	\end{example}
 	\begin{solution}
 		Observem que
@@ -482,7 +483,8 @@
 		\end{align*}
 		Ara bé, si~\(h=1\) trobem que~\(\conjugat{h}/h=1\), però si~\(h=\iu\) trobem que~\(\conjugat{h}/h=-\iu/\iu=-1\), i per tant~\(f\) no és~\(\CC\)-derivable en cap punt de~\(\CC\).
 	\end{example}
-	\subsection{Funcions holomorfes i funcions enteres}
+\section{Funcions holomorfes i funcions enteres}
+	\subsection{Funcions holomorfes}
 	\begin{definition}[Funció holomorfa]
 		\labelname{funció holomorfa}\label{def:funció holomorfa}
 		\labelname{funció entera}%\label{def:funció entera}
@@ -494,36 +496,18 @@
 		Sigui~\(\Omega\subseteq\CC\) un obert. Denotarem
 		\[\Hol(\Omega)=\{f\colon\Omega\longrightarrow\CC\mid f\text{ és holomorfa en }\Omega\}.\]
 	\end{notation}
-	\begin{note}
-		Es generalitza tota la teoria sobre sèries de potències a \ref{subsec:sèries de potències} de~\(\RR\) a~\(\CC\). Els direm sèries de potències complexes.
-	\end{note}
-	\begin{example}
-		Sigui~\(f(z)=\sum_{n=0}^{\infty}a_{n}z^{n}\) una sèrie de potències complexa amb radi de convergència~\(R\). Aleshores~\(f(z)\) és holomorfa sobre~\(\Disc(0,R)\).
-	\end{example}
-	\begin{theorem}[Teorema d'Abel]
-		\labelname{Teorema d'Abel}\label{thm:Teorema d'Abel per sèries de potències complexes}
-		Sigui~\(f(z)=\sum_{n=0}^{\infty}a_{n}z^{n}\) amb radi de convergència~\(R=1\) tal que~\(f(1)=\sum_{n=0}^{\infty}a_{n}\) sigui convergent. Aleshores existeix un~\(S\in\CC\) tal que
-		\[\lim_{\substack{z\to1\\z\in A}}f(z)=S\]
-		on
-		\begin{equation}
-			\label{eq:1:thm:Teorema d'Abel per sèries de potències complexes}
-			A=\{z\in\CC\mid\abs{1-z}<k(1-\abs{z})\text{ per a cert }k\in\RR\}.
-		\end{equation}
-	\end{theorem}
+	\begin{proposition}
+		\label{prop:derivació de funcions holomorfes}
+		Siguin~\(\Omega\subseteq\CC\) un obert i~\(f,g\in\Hol(\Omega)\) dues funcions. Aleshores
+		\begin{enumerate}
+			\item \(f+g\in\Hol(\Omega)\) i~\((f+g)'(z)=f'(z)+g'(z)\).
+			\item \(fg\in\Hol(\Omega)\) i~\((fg)'(z)=f'(z)g(z)+g'(z)f(z)\).
+			\item Si~\(g(z)\neq0\) per a tot~\(z\in\Omega\), aleshores~\(f/g\in\Hol(\Omega)\) i
+			\[(f/g)'(z)=\frac{f'(z)g(z)-g'(z)f(z)}{g(z)^{2}}.\]
+		\end{enumerate}
+	\end{proposition}
 	\begin{proof}
 		%TODO
-%		Podem suposar, sense pèrdua de generalitat, que~\(S=0\) redefinint~\(a_{0}\) com~\(a_{0}-S\).
-%		
-%		Definim
-%		\[S_{N}=\sum_{n=0}^{N}a_{n}.\]
-%		Aleshores~\(\lim_{N\to\infty}S_{N}=0\). Per tant, per la definició de~\myref{def:límit} tenim que per a tot~\(\varepsilon>0\) existeix un~\(n_{0}\in\NN\) tal que per a tot~\(N>n_{0}\) tenim que~\(\abs{S_{N}}<\varepsilon\). Per tant si prenem un~\(\varepsilon>0\) tenim que existeix un~\(n_{0}\) tal que per a tot~\(N>n_{0}\) trobem
-%		\begin{align*}
-%			\modul{S_{N}z^{N}}&=\modul{S_{N}}\modul{z^{N}} \tag{\ref{def:mòdul d'un nombre complex}} \\
-%			&<\varepsilon\modul{z^{N}} \tag{\ref{def:límit}} \\
-%			&=\varepsilon\modul{z}^{N} \tag{\ref{prop:el producte de mòduls és el mòdul del producte}} \\
-%			&\leq\varepsilon. \tag{\ref{eq:1:thm:Teorema d'Abel per sèries de potències complexes}}
-%		\end{align*}
-%		i per tant~\(\modul{S_{N}z^{N}}<\varepsilon\). També tenim pel~\myref{thm:criteri M de Weierstrass} que la sèrie~\(\sum_{n=0}^{N}\) és convergent quan~\(z\) tendeix a~\(1\), i per tant~\(\modul{1-z}\)
 	\end{proof}
 	\begin{definition}[Funció entera]
 		\labelname{funció entera}\label{def:funció entera}
@@ -532,8 +516,65 @@
 	\begin{example}
 		Els polinomis són funcions enteres.
 	\end{example}
+	\begin{solution}
+		Per l'exemple~\myref{ex:la funció identitat és entera} tenim que la funció~\(g(z)=z\) és entera. Aleshores per la proposició~\myref{prop:derivació de funcions holomorfes} trobem que les funcions~\(g_{n}(z)=a_{n}z^{n}\) són enteres, i de nou per la proposició trobem que les funcions~\(f(z)=a_{0}+a_{1}z+\dots+a_{n}z^{n}\) són enteres.
+	\end{solution}
+	\subsection{Sèries de potències complexes}
+	\begin{definition}[Sèries de potències]
+		\labelname{sèrie de potències}\label{def:sèrie de potències complexes}
+		Sigui~\((a_{n})_{n\in\mathbb{N}}\) una successió de nombres complexos. Aleshores direm que la sèrie
+		\[\sum_{n=0}^{\infty}a_{n}z^{n}\]
+		és una sèrie de potències complexa.
+		
+		Si existeix el límit
+		\[\lim_{N\to\infty}\sum_{n=0}^{N}a_{n}z^{n}=L\]
+		existeix direm que la sèrie és convergent i que
+		\[\sum_{n=0}^{\infty}a_{n}z^{n}=L.\]
+		
+	\end{definition}
+	\begin{theorem}
+		\label{thm:radi de convergència d'una sèrie de potències complexa}
+		Sigui~\(\sum_{n=0}^{\infty}a_{n}z^{n}\) una sèrie de potències complexa i~\(R\) un real tal que
+		\[R^{-1}=\limsup_{n\to\infty}\sqrt[n]{\modul{a_{n}}}.\]
+		Aleshores
+		\begin{enumerate}
+			\item\label{thm:radi de convergència d'una sèrie de potències complexa:enum1} la sèrie~\(\sum_{n=0}^{\infty}a_{n}z^{n}\) és absolutament convergent per a tot~\(z\) satisfent~\(\modul{z}<R\).
+			\item\label{thm:radi de convergència d'una sèrie de potències complexa:enum2} per a tot real~\(r<R\) la sèrie de funcions~\(\sum_{n=0}^{\infty}a_{n}z^{n}\) convergeix uniformement per a tot~\(z\) satisfent~\(\modul{z}\leq r\).
+			\item\label{thm:radi de convergència d'una sèrie de potències complexa:enum3} la sèrie~\(\sum_{n=0}^{\infty}a_{n}z^{n}\) és divergent per a tot~\(z\) satisfent~\(\modul{z}>R\).
+		\end{enumerate}
+	\end{theorem}
+	\begin{proof}
+		%TODO
+	\end{proof}
+	\begin{definition}[Radi de convergència]
+%		\labelname{radi de convergència d'una sèrie de potències}\label{def:radi de convergència d'una sèrie de potències}
+		Siguin~\(\sum_{n=0}^{\infty}a_{n}z^{n}\) una sèrie de potències i~\(R\) un real satisfent
+		\begin{enumerate}
+			\item la sèrie~\(\sum_{n=0}^{\infty}a_{n}z^{n}\) és absolutament convergent per a tot~\(z\) satisfent~\(\modul{z}<R\).
+			\item per a tot real~\(r<R\) la sèrie de funcions~\(\sum_{n=0}^{\infty}a_{n}z^{n}\) convergeix uniformement per a tot~\(z\) satisfent~\(\modul{z}\leq r\).
+			\item La sèrie~\(\sum_{n=0}^{\infty}a_{n}z^{n}\) és divergent per a tot~\(z\) satisfent~\(\modul{z}>R\).
+		\end{enumerate}
+		Aleshores direm que~\(R\) és el radi de convergència de la sèrie de potències.
+		
+		Aquesta definició té sentit pel Teorema~\myref{thm:radi de convergència d'una sèrie de potències complexa}.
+	\end{definition}
+	\begin{definition}[Disc]
+		\labelname{disc}\label{def:disc}
+		Sigui~\(a\) un nombre complex i~\(R>0\) un nombre real. Aleshores definim
+		\[\Disc(a,R)=\{z\in\CC\mid\modul{z-a}<R\}\]
+		com el disc centrat en~\(a\) de radi~\(R\).
+	\end{definition}
+	\begin{proposition}
+		Sigui~\(f(z)=\sum_{n=0}^{\infty}a_{n}z^{n}\) una sèrie de potències complexa amb radi de convergència~\(R\). Aleshores~\(f(z)\) és holomorfa sobre~\(\Disc(0,R)\).
+	\end{proposition}
+	\begin{proof}
+		%TODO
+	\end{proof}
 	\begin{example}
-		La funció~\(\e^{z}\) és entera.
+		\label{ex:exponencial complexa}
+		La funció
+		\[\e^{z}=\sum_{n=0}^{\infty}\frac{z^{n}}{n!}\]
+		és entera.
 	\end{example}
 	\begin{notation}
 		Denotarem
@@ -563,5 +604,76 @@
 			\cosh(z)=\cos(\iu z)\qquad\text{i}\qquad\sinh(z)=-\iu\sin(\iu z).
 		\end{equation*}
 	\end{observation}
+	\begin{theorem}[Teorema d'Abel]
+		\labelname{Teorema d'Abel}\label{thm:Teorema d'Abel per sèries de potències complexes}
+		Sigui~\(f(z)=\sum_{n=0}^{\infty}a_{n}z^{n}\) amb radi de convergència~\(R=1\) tal que~\(\sum_{n=0}^{\infty}a_{n}\) sigui convergent. Aleshores
+		\[\lim_{\substack{z\to1\\z\in A}}f(z)=\sum_{n=0}^{\infty}a_{n}\]
+		on
+		\begin{equation}
+			\label{eq:1:thm:Teorema d'Abel per sèries de potències complexes}
+			A=\{z\in\CC\mid\abs{1-z}<k(1-\modul{z})\text{ per a cert }k\in\RR\}.
+		\end{equation}
+	\end{theorem}
+	\begin{proof}
+		%TODO
+%		Podem suposar, sense pèrdua de generalitat, que~\(S=0\) redefinint~\(a_{0}\) com~\(a_{0}-S\).
+%		
+%		Definim
+%		\[S_{N}=\sum_{n=0}^{N}a_{n}.\]
+%		Aleshores~\(\lim_{N\to\infty}S_{N}=0\). Per tant, per la definició de~\myref{def:límit} tenim que per a tot~\(\varepsilon>0\) existeix un~\(n_{0}\in\NN\) tal que per a tot~\(N>n_{0}\) tenim que~\(\abs{S_{N}}<\varepsilon\). Per tant si prenem un~\(\varepsilon>0\) tenim que existeix un~\(n_{0}\) tal que per a tot~\(N>n_{0}\) trobem
+%		\begin{align*}
+%			\modul{S_{N}z^{N}}&=\modul{S_{N}}\modul{z^{N}} \tag{\ref{def:mòdul d'un nombre complex}} \\
+%			&<\varepsilon\modul{z^{N}} \tag{\ref{def:límit}} \\
+%			&=\varepsilon\modul{z}^{N} \tag{\ref{prop:el producte de mòduls és el mòdul del producte}} \\
+%			&\leq\varepsilon. \tag{\ref{eq:1:thm:Teorema d'Abel per sèries de potències complexes}}
+%		\end{align*}
+%		i per tant~\(\modul{S_{N}z^{N}}<\varepsilon\). També tenim pel~\myref{thm:criteri M de Weierstrass} que la sèrie~\(\sum_{n=0}^{N}\) és convergent quan~\(z\) tendeix a~\(1\), i per tant~\(\modul{1-z}\)
+	\end{proof}
 	\subsection{Equacions de Cauchy-Riemann}
+	\begin{lemma}[Equacions de Cauchy-Riemann]
+		\labelname{equacions de Cauchy-Riemann}\label{lema:equacions de Cauchy-Riemann}
+		Denotant~\(x=\Re(z)\) i~\(y=\Im(z)\), sigui
+		\begin{equation*}
+			\label{eq:1:lema:equaciosn de Cauchy-Riemann}
+			f(z,\conjugat{z})=f(x,y)=u(z,\conjugat{z})+\iu v(z,\conjugat{z})=u(x,y)+\iu v(x,y)
+		\end{equation*}
+		una funció complexa. Aleshores
+		\begin{equation*}
+			\label{eq:3:lema:equacions de Cauchy-Riemann}
+			\frac{\partial f}{\partial z}=\frac{1}{2}\biggl(\frac{\partial f}{\partial x}-\iu\frac{\partial f}{\partial y}\biggr)\qquad\text{i}\qquad\frac{\partial f}{\partial\conjugat{z}}=\frac{1}{2}\biggl(\frac{\partial f}{\partial x}+\iu\frac{\partial f}{\partial y}\biggr)
+		\end{equation*}
+	\end{lemma}
+	\begin{proof}
+		Per la proposició~\myref{prop:fórmules per la part real i part imaginària d'un nombre complex} tenim que
+		\[x=\frac{z+\conjugat{z}}{2}\qquad\text{i}\qquad y=\frac{z-\conjugat{z}}{2\iu}.\]
+		Per tant
+		\begin{gather}
+			\label{eq:2:lema:equacions de Cauchy-Riemann}
+			\begin{split}
+				\frac{\partial x}{\partial z}&=\frac{1}{2}\\
+				\frac{\partial x}{\partial\conjugat{z}}&=\frac{1}{2}
+			\end{split}\qquad\text{i}\qquad
+			\begin{split}
+				\frac{\partial y}{\partial z}&=\frac{1}{2\iu}\\
+				\frac{\partial y}{\partial\conjugat{z}}&=\frac{-1}{2\iu}
+			\end{split}
+		\end{gather}
+		Aleshores calculem
+		\begin{align*}
+			\frac{\partial f}{\partial z}&=\frac{\partial u}{\partial x}\frac{\partial x}{\partial z}+\frac{\partial u}{\partial y}\frac{\partial y}{\partial z}+\iu\biggl(\frac{\partial v}{\partial x}\frac{\partial x}{\partial z}+\frac{\partial v}{\partial y}\frac{\partial y}{\partial z}\biggr) \tag{\ref{eq:1:lema:equaciosn de Cauchy-Riemann}}\\
+			&=\frac{1}{2}\frac{\partial u}{\partial x}+\frac{1}{2\iu}\frac{\partial u}{\partial y}+\iu\biggl(\frac{1}{2}\frac{\partial v}{\partial x}+\frac{1}{2\iu}\frac{\partial v}{\partial y}\biggr) \tag{\ref{eq:2:lema:equacions de Cauchy-Riemann}}\\
+			&=\frac{1}{2}\Biggl(\frac{\partial u}{\partial x}+\iu\frac{\partial v}{\partial x}-\iu\biggl(\frac{\partial u}{\partial y}+\iu\frac{\partial v}{\partial y}\biggr)\Biggr)=\frac{1}{2}\biggl(\frac{\partial f}{\partial x}-\iu\frac{\partial f}{\partial y	}\biggr), \tag{\ref{eq:3:lema:equacions de Cauchy-Riemann}}
+		\end{align*}
+		i
+		\begin{align*}
+			\frac{\partial f}{\partial\conjugat{z}}&=\frac{\partial u}{\partial x}\frac{\partial x}{\partial\conjugat{z}}+\frac{\partial v}{\partial y}\frac{\partial y}{\partial\conjugat{z}}+\iu\biggl(\frac{\partial v}{\partial x}\frac{\partial x}{\partial\conjugat{z}}+\frac{\partial v}{\partial y}\frac{\partial y}{\partial\conjugat{z}}\biggr)  \tag{\ref{eq:1:lema:equaciosn de Cauchy-Riemann}}\\
+			&=\frac{1}{2}\frac{\partial u}{\partial x}-\frac{1}{2\iu}\frac{\partial u}{\partial y}+\iu\biggl(\frac{1}{2}\frac{\partial v}{\partial x}-\frac{1}{2\iu}\frac{\partial v}{\partial y}\biggr) \tag{\ref{eq:2:lema:equacions de Cauchy-Riemann}}\\
+			&=\frac{1}{2}\Biggl(\frac{\partial u}{\partial x}+\iu\frac{\partial v}{\partial x}+\iu\biggl(\frac{\partial u}{\partial y}+\iu\frac{\partial v}{\partial y}\biggr)\Biggr)=\frac{1}{2}\biggl(\frac{\partial f}{\partial x}+\iu\frac{\partial f}{\partial y}\biggr), \tag{\ref{eq:3:lema:equacions de Cauchy-Riemann}}
+		\end{align*}
+		com volíem veure.
+	\end{proof}
+	\begin{observation}
+		Sigui~\(f(z,\conjugat{z})\) una funció complexa. Aleshores
+		\[\frac{\partial f}{\partial z}=\frac{\partial f}{\partial x}\qquad\text{i}\qquad\frac{\partial f}{\partial\conjugat{z}}=0.\]
+	\end{observation}
 \end{document}
