--- a/parts/Probabilitat.tex
+++ b/parts/Probabilitat.tex
@@ -224,7 +224,7 @@
 		Aleshores per la definició de~\myref{def:probabilitat} trobem que
 		\[\Probabilitat(B)=\Probabilitat(A\uplus(B\setminus A))=\Probabilitat(A)+\Probabilitat(B\setminus A),\]
 		i trobem que
-		\[\Probabilitat(B\setminus A)=\Probabilitat(B)-\Probabilitat(A).\]
+		\[\Probabilitat(B\setminus A)=\Probabilitat(B)-\Probabilitat(A).\qedhere\]
 	\end{proof}
 	\begin{corollary}
 		\label{cor:probabilitat del complementari}
