--- a/Apunts.tex
+++ b/Apunts.tex
@@ -587,8 +587,7 @@
 	\subfile{parts/Complexa.tex}
 	\subfile{parts/Estadistica.tex}
 	\subfile{parts/GeoDiferencial.tex}
-	\subfile{parts/EDOS2.tex}
-\end{document} %WEB TO' MOLONA: http://www-history.mcs.st-and.ac.uk/BiogIndex.html
+	\subfile{parts/EDOS2.tex} %WEB TO' MOLONA: http://www-history.mcs.st-and.ac.uk/BiogIndex.html
 
 % Definir commanda per [x] i canviar-les totes. Potser amb paràmetres (per barra, claudators i superíndexos) Potser dues commandes per overline i claudators
 
@@ -597,3 +596,4 @@
 %\[\mathbb{A}\mathbb{B}\mathbb{C}\mathbb{D}\mathbb{E}\mathbb{F}\mathbb{G}\mathbb{H}\mathbb{I}\mathbb{J}\mathbb{K}\mathbb{L}\mathbb{M}\mathbb{N}\mathbb{O}\mathbb{P}\mathbb{Q}\mathbb{R}\mathbb{S}\mathbb{T}\mathbb{U}\mathbb{V}\mathbb{W}\mathbb{X}\mathbb{Y}\mathbb{Z}\]
 
 % http://www.math.uconn.edu/~kconrad/blurbs/
+\end{document}
