--- a/parts/Probabilitat.tex
+++ b/parts/Probabilitat.tex
@@ -63,7 +63,7 @@
 		\end{enumerate}
 		%TODO (?)
 	\end{solution}
-\subsection{Àlgebres i \ensuremath{\sigma}-àlgebres}
+\subsection{Àlgebres i \texorpdfstring{\(\sigma\)}{sigma}-àlgebres}
 	\begin{definition}[Àlgebra]
 		\labelname{àlgebra}\label{def:àlgebra}
 		Sigui~\(\algebra{A}\) una co{\lgem}ecció de subconjunts~\(\Omega\) tal que
