--- a/parts/referencies.bib
+++ b/parts/referencies.bib
@@ -372,7 +372,7 @@
 	version = {1.2},
 	year = {2017},
 	url = {http://mat.uab.cat/~aguade/teaching.html},
-	isbn = {ISBN-13: 978-84-697-0541-4},
+	isbn = {978-84-697-0541-4},
 	OPTurldate = {2019-01-13},
 }
 
