--- a/Apunts.tex
+++ b/Apunts.tex
@@ -23,7 +23,6 @@
 \usepackage[uprightGreek]{newtxmath}
 \usepackage{tikz-cd}
 \usepackage{tkz-euclide}
-\usetkzobj{all}
 \usetikzlibrary{decorations.text}
 \usepackage{anyfontsize}
 \usepackage[scaled=0.92]{helvet}
@@ -533,8 +532,8 @@
 	\def\@myref@opt[#1]#2{\hyperref[#2]{#1~(\ref*{#2})}}
 	\def\@myref@#1{\mynameref{#1}{\csname r@#1\endcsname}}
 \makeatother
-\def\myref#1{\ref{#1}}
-%\renewcommand{\myref}[1]{\mynameref{#1}{\csname r@#1\endcsname}}
+%\def\myref#1{\ref{#1}}
+\renewcommand{\myref}[1]{\mynameref{#1}{\csname r@#1\endcsname}}
 %%\newcommand{\myref}[1]{\hyperref[#1]{\nameref{#1} \eqref{#1}}}
 
 %\makeatletter
