--- a/Apunts.tex
+++ b/Apunts.tex
@@ -80,7 +80,7 @@
 }
 
 \title{%
-	\href{https://claudilleyda.github.io}{Apunts de matemàtiques}}
+	\href{https://claudi.github.io}{Apunts de matemàtiques}}
 \author{Claudi Lleyda Moltó}
 \date{Les matemàtiques són un joc de definicions.}
 
