--- a/NovoTeX/Main.tex
+++ b/NovoTeX/Main.tex
@@ -279,13 +279,13 @@
 
 %				========== EDICIÓ TIPOGRÀFICA DEL LLIBRE =========
  %%%%% DADES I CONFIGURACIÓ %%%%%
-\title{\href{https://claudi.github.io}{Apunts de matemàtiques}}
+\newcommand{\link}{https://claudi.github.io}
+\title{\href{\link}{Apunts de matemàtiques}}
 \author{Claudi Lleyda Moltó}
 \date{}
 \newcommand{\cita}{Les matemàtiques són un joc de definicions}
 \newcommand{\subtitol}{Notes de classe}
 \newcommand{\promocio}{Promoció 2016-17}
-\newcommand{\link}{https://claudi.github.io}
 \hypersetup{
 	colorlinks=true,
 %	hidelinks=false, % TRUE
